# atlas-platform

./: .env.example  .gitattributes  .gitignore  .gitleaks.toml  .markdownlint-cli2.yaml  .pre-commit-config.yaml  .secrets.baseline  .sops.yaml  .typos.toml  AGENTS.md  CONTRIBUTING.md  README.md  SECURITY.md  docker-compose.yml  mise.toml  mkdocs.yml  pyrightconfig.json
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md  renovate.json
services/inventory-service/: .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml
services/inventory-service/alembic/: env.py
services/inventory-service/alembic/versions/: 20260306_0001_create_products_table.py
services/inventory-service/scripts/: migrate.sh  start.sh
services/inventory-service/src/inventory_service/: main.py
services/inventory-service/src/inventory_service/inventory/adapters/api/http/: router.py  schemas.py
services/inventory-service/src/inventory_service/inventory/adapters/persistence/sqlalchemy/: models.py  repository.py  uow.py
services/inventory-service/src/inventory_service/inventory/application/: commands.py  use_cases.py
services/inventory-service/src/inventory_service/inventory/domain/: entities.py
services/inventory-service/src/inventory_service/inventory/ports/: repository.py  uow.py
services/inventory-service/src/inventory_service/shared/: config.py  db.py
services/inventory-service/tests/unit/: test_domain_entities.py  test_http_router.py  test_http_schemas.py  test_inventory_use_cases.py  test_main_and_config.py  test_sqlalchemy_repository_and_uow.py
(+243 files in other folders)
