[project]
name = "inventory-service"
version = "0.1.0"
description = "Inventory microservice with hexagonal + screaming architecture"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.116.0,<1.0.0",
  "uvicorn[standard]>=0.35.0,<1.0.0",
  "sqlalchemy>=2.0.40,<3.0.0",
  "alembic>=1.16.0,<2.0.0",
  "psycopg[binary]>=3.2.0,<4.0.0",
  "pydantic>=2.11.0,<3.0.0",
  "pydantic-settings>=2.10.0,<3.0.0",
  "sentry-sdk[fastapi]>=2.39.0,<3.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4.0,<10.0.0",
  "httpx>=0.28.0,<1.0.0",
  "pytest-cov>=6.0.0,<8.0.0",
  "pyright>=1.1.404,<2.0.0"
]

[tool.pytest.ini_options]
addopts = "-q --cov=inventory_service --cov-report=term-missing --cov-report=xml"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["src/inventory_service"]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 90

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
